--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,4 +67,12 @@
     <string name="price">Price</string>
     <string name="duration">Duration</string>
     <string name="login_with_api">Login With API</string>
+    <string name="full_name">Full Name</string>
+    <string name="full_name_hint">Enter full name</string>
+    <string name="role_account">Role Account</string>
+
+    <string-array name="role_accounts">
+        <item>recruiter</item>
+        <item>job seeker</item>
+    </string-array>
 </resources>
