--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,9 +70,16 @@
     <string name="full_name">Full Name</string>
     <string name="full_name_hint">Enter full name</string>
     <string name="role_account">Role Account</string>
+    <string name="enter_password">Enter Password</string>
+    <string name="job_title">Job Title</string>
 
     <string-array name="role_accounts">
         <item>recruiter</item>
         <item>job seeker</item>
+    </string-array>
+
+    <string-array name="job_titles">
+        <item>Android Developer</item>
+        <item>Web Developer</item>
     </string-array>
 </resources>
