--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,6 +72,17 @@
     <string name="role_account">Role Account</string>
     <string name="enter_password">Enter Password</string>
     <string name="job_title">Job Title</string>
+    <string name="note_title">Note Title</string>
+    <string name="enter_note_title">Enter note title</string>
+    <string name="note_body">Note Body</string>
+    <string name="enter_note_body">Enter note body</string>
+    <string name="add">Add</string>
+    <string name="search_shorting_menu">Search shorting menu</string>
+    <string name="search_value">Search value</string>
+    <string name="notification_no_search_result">Notification no search result</string>
+    <string name="no_search_result">No Search Result</string>
+    <string name="choose_a_sort_method">Choose a sort method</string>
+    <string name="search">Search</string>
 
     <string-array name="role_accounts">
         <item>recruiter</item>
@@ -81,5 +92,13 @@
     <string-array name="job_titles">
         <item>Android Developer</item>
         <item>Web Developer</item>
+    </string-array>
+
+    <string-array name="sort_methods">
+        <item>Sort By Name</item>
+        <item>Sort By Skill</item>
+        <item>Sort By Location</item>
+        <item>Sort By Job Title</item>
+        <item>Sort By Status Job</item>
     </string-array>
 </resources>
